fixed alignment and added shiny effect

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,38 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap');
+
 html, body {
   background-color: white;
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
-}
-
-#asdf {
-  height: 500px;
-  width: 500px;
-  left: 200px;
-  background: radial-gradient(circle,#0141ff 0,rgba(161,252,70,0) 71%);
-  opacity: .15;
-  position: absolute;
-}
-
-#asdf1 {
-  height: 500px;
-  width: 500px;
-  left: 400px;
-  background: radial-gradient(circle,#ff0184 0,rgba(161,252,70,0) 71%);
-  top: 200px;
-  opacity: .15;
-  position: absolute;
-
-}
-
-#asdf2 {
-  height: 500px;
-  width: 500px;
-  background: radial-gradient(circle,#01ff51 0,rgba(161,252,70,0) 71%);
-  top: -10px;
-  left: 600px;
-  opacity: .15;
-  position: absolute;
-
 }
